fix: Corrige sistema de autenticação
- Permite login com username ou email
- Ajusta view para buscar campo 'username' do template
- Atualiza placeholder para indicar username ou email
- Melhora compatibilidade com usuários existentes

--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -317,7 +317,7 @@
 
     <!-- Campo Username -->
     <div class="form-group">
-      <input type="text" id="username" name="username" class="form-input" placeholder="Nome de usuário" required
+      <input type="text" id="username" name="username" class="form-input" placeholder="Nome de usuário ou email" required
         autocomplete="username">
       <i class="fas fa-user input-icon"></i>
     </div>
